# Simple-RAG

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  embeddings_cache.db  env-example  pyproject.toml  settings.toml
src/: main.py
src/api/v1/: dependencies.py
src/api/v1/endpoints/: health.py  rag.py
src/core/: config.py  database.py  exceptions.py  openai_client.py  structlog_logs.py
src/knowledge/: gutenberg_dense_chunk_3.txt
src/repositories/: rag_repository.py
src/schemas/: rag.py
src/services/: agent_service.py  rag_service.py
tests/: conftest.py  test_rag.py
