[project]
name = "qna-rag-service"
version = "0.1.0"
description = "FastAPI QnA RAG Microservice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "dynaconf>=3.2.13",
    "fastapi>=0.110.0",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.1",
    "pydantic>=2.6.4",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "uvicorn>=0.28.0",
    "python-multipart>=0.0.32",
    "pytest>=9.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.9.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ASYNC"]
ignore = [
    "B008", # Do not perform function call `Depends` in argument defaults
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
pythonpath = [
  "src"
]